syntax = "proto3";
package logging;

service Logger {
  rpc Log (LogRequest) returns (LogResponse);
}

message LogRequest {
  string message = 1;
  LogLevel level = 2;
}

message LogResponse {
  bool success = 1;
}

enum LogLevel {
  INFO = 0;
  WARNING = 1;
  ERROR = 2;
}